--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@mui/x-data-grid": "^7.1.1",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.6",
+    "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.2.1",
+    "recharts": "^2.12.5",
     "typescript": "^5.4.4"
   },
   "devDependencies": {
